# docode

./: .gitignore  Makefile  README.md  SYNTAX.rst  basic_python.py  interactive_console_output.xml  make.bat  pyproject.toml
ai_demo/: README.md  (+2 more)
archived/: Makefile  make.bat  pyproject.toml
archived/2025/ccode/py/: date_time_format.py  events.py  matplotlib_demo0.py  pandas_data.xlsx
archived/2025/docs/: ai.md
archived/2025/docs/docker-compose/: docker-compose-dify-example.yml
archived/2025/example/: README.md
archived/2025/example/mcp-demo/: README.md
archived/2025/example/mcp-demo/demo1/: server.py
archived/2025/example/midscenejs-demo/: project.list.md
archived/2025/example/midscenejs-demo/playwright-demo1/: .gitignore  package.json
archived/2025/example/midscenejs-demo/playwright-demo1/e2e/: baidu.spec.ts  ebay.spec.ts
archived/2025/flask-demo/flask-demo/demo1/: __init__.py
archived/2025/flask-demo/flask-demo/demo1/templates/: 401.html
archived/2025/flask-demo/history/flask-forum-notrun/app/: models.py
archived/2025/flask-demo/history/flask-simple-forum/forum/: urls.py
archived/SikuliXDemo/: README.md
archived/SikuliXDemo/test1.sikuli/: test1.py
archived/ai_demo/: .gitignore  README.md
archived/ai_demo/ai_model_usage/: text_to_video01.py
archived/ai_demo/backup/: 08torchtext.py  pytorch_demo0.py  transformers_demo0.py
archived/ai_demo/backup/my_classify/: main.py  text_training_data.csv
archived/ai_demo/backup/temp_demo/: test1.py  test100.py  test2.py
archived/ai_demo/huggingface_datasets/: 01demo.py  README.md  test.csv  train.csv
archived/ai_demo/ocr/: demo2.py
archived/ai_demo/pytorch_demo/: 01save_to_image.py  03validate_custom_model.py  04load_model_retrain.py  05nn.py  06tensor.py
archived/ccode/py/: README.md  pandas_demo0.py  processed_sales.xlsx
archived/demo_file/: Dockerfile  docker-compose.yml
archived/docs/: conda.md  cuda.md  database.md  db.md  docker.md  jenkins.md  k8s.md  linux.md  macos.md  npm.md  pdm.md  pip.md  reS.rst  sql.md  tester.md  venv.md  vxbox.md  wsl.md  测试.xmind
archived/flask-demo/: README.md
archived/flask-demo/history/flask-demo1/demo1/: auth.py
archived/flask-demo/history/flask-forum-notrun/: requirements.txt  run_deprecated.py
archived/flask-demo/history/flask-forum-notrun/app/auth/: decorators.py
archived/flask-demo/history/flask-forum-notrun/app/forms_deprecated/: login.py
archived/flask-demo/history/flask-forum-notrun/app/routes/: main.py
archived/flask-demo/history/flask-simple-forum/forum/: app.py
archived/flask-demo/history/flask-simple-forum/forum/auth/: __init__.py
archived/flask-demo/history/flask-simple-forum/forum/templates/: index.html
archived/groovy_demo/basic/: DemoJava2.java  Makefile  demo0.groovy
archived/java_demo/: README.md  mvn.md
archived/java_demo/demo0/: Demo0.java  Demo1.java  Demo2.java
archived/javascript_demo/nodejsdemo/: README.rst  package.json
archived/javascript_demo/vue_demo/vue-demo/: package-lock.json
archived/javascript_demo/vue_demo/vue-demo/src/: App.vue
archived/jmeter_demo/: .gitignore  MANIFEST.MF  MyPlugin1.java  demo1.jtl
archived/python_demo/: .gitignore
archived/python_demo/python/playwright/: demo0_sync.py  demo2_param.py  demo3_oper.py  test.robot
archived/python_demo/python/xsetuptools/demo0_py2/: setup.py
archived/python_demo/python/xsetuptools/demo0_py3/: README.md  make.bat  pyproject_.toml  setup.py
archived/python_demo/xarchived/202401/xbasic/: format_string_demo0.py
archived/python_demo/xarchived/202401/xbasic/demo_for_descriptor/: demo1.py
archived/python_demo/xarchived/202401/xbasic/magic_demo/: m1_for_test.py
archived/python_demo/xarchived/202401/xconcurrent/: gevent_demo0.py
archived/python_demo/xarchived/202401/xcrawl/: pyspider_demo0.py
archived/python_demo/xarchived/202401/xctypes/: encry.c
archived/python_demo/xarchived/202401/xdata/: pandas_demo0.py  test_data.csv
archived/python_demo/xarchived/202401/xdata/orm_demo1/: app.py
archived/python_demo/xarchived/202401/xpytest/: test_demo0.py
archived/python_demo/xarchived/202401/xsphinx/: README.rst
archived/python_demo/xarchived/202401/xsphinx/source/: autodoc_demo.py
archived/python_demo/xarchived/202401/xsystemservice/: argparse_demo0.py  pathlib_demo0.py
archived/python_demo/xarchived/202408/x000classic_code/: locust_event.py
archived/python_demo/xarchived/202408/x000classic_code/xflask/: .gitignore  make.bat  pyproject.toml
archived/python_demo/xarchived/202408/xbasic/metaclassdemo/: demo1.py
archived/python_demo/xarchived/202408/xpdm/demo1/: pyproject.toml
archived/python_demo/xarchived/202408/xplaywright/: .gitignore
archived/python_demo/xarchived/202408/xpydantic/: demo1_orm_demo0.py  demo1_orm_json.py  demo2_config_demo0.py  demo3_field_validator.py
archived/python_demo/xarchived/202408/xrobotframework/xapidemo/: py_lib1.py
archived/python_demo/xarchived/202408/xrobotframework/xlistener/: demo1.robot  demo2_lib.py  readme.md
archived/python_demo/xarchived/202408/xselenium/: README.md
archived/python_demo/xarchived/202408/xsetuptools/demo0_unified/: MANIFEST.in  README.md  pyproject.toml
archived/python_demo/xarchived/202408/xstring/: format_string_demo0.py
archived/python_demo/xarchived/202408/xtyping/: generic_demo0.py
archived/shell_demo/: README.md  demo0.sh
archived/summary/: JavaSyntax.java  js_syntax.js
archived/xpytorch/: .gitignore  README.md  pytorch_huggingface_demo0.py
example/flask-demo/history/flask-demo1/: README.md  pyproject.toml
example/flask-demo/history/flask-demo1/demo1/: models.py
python_demo/xarchived/202408/xpoetry/demo0/: pyproject.toml
python_demo/xpytest/: README.md  conftest.py  pyproject.toml  test_demo0.py
python_demo/xpytest/pytest_myplugin1/: README.md  pytest_myplugin1.py
python_demo/xsetuptools/demo0/: MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
python_demo/xsetuptools/demo0/mypkg1/: __main__.py
python_demo/xsetuptools/demo0/mypkg1/src/: add.py
python_demo/xsetuptools/demo0/mypkg1/tests/: test_1.py
(+487 files in other folders)
