[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = "pytest_myplugin1"
version = "1.0.0"
classifiers = [
    "Framework :: Pytest",
]


[project.entry-points.pytest11]
pytest_myplugin1 = "pytest_myplugin1.pytest_myplugin1"


[tool.pytest.ini_options]
# 如果有无效的marker，抛出异常，如果不指定此参数，一般就是报warning
# addopts = --strict-markers

# 注册markers
markers = [
    "slow: slow test case(run time > 10s)",
    "P0"
]

usefixtures = [
    "fix6"
]

log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_level = "DEBUG"
log_date_format = "%Y-%m-%d %H:%M:%S"

log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
