[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mypkg1"
version = "1.0.0"
dependencies = [
    "requests",
    # requests <= 0.4
    # requests >= 0.4
    # requests > 0.4
    # requests < 0.4
    # requests == 0.4
    # requests != 0.4
    "selenium==4.14.0",
]

[tool.setuptools]
# 需要配合MANIFEST.in文件使用
include-package-data = true
# This is already the default behaviour if you are using
# pyproject.toml to configure your build.
# You can deactivate that with `include-package-data = false`

# 这是查找引擎的默认配置
# [tool.setuptools.packages]
# find = {}  # Scan the project directory with the default parameters

# 如果需要自定义，参考如下
[tool.setuptools.packages.find]
# All the following settings are optional:
# 使用mypkg1是不对的，这样会去查找这个目录下的包，也就是只会打包testcases层的内容
# where = ["mypkg1"]  # ["."] by default
# include = ["mypkg1*"]  # ["*"] by default
exclude = ["mypkg1.testcases*"]  # empty by default
# namespaces = true  # true by default

[project.scripts]
# 通过pip 或 pip -e安装后，就可以使用mypkg1命令了
mypkg1 = "mypkg1.__main__:run"