[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "xflask"
dependencies = [
    "flask>=3.0.0",
    "flask_sqlalchemy>=3.1.1",
    "requests>=2.31.0",
    "waitress>=3.0.0",
    "pydantic>=2.7.0",
]
dynamic = ["version"]
description = "xflask."
requires-python = ">=3.8"
authors = [
    {name = "linlei", email = "xmlclone@gmail.com"},
]


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
include = ["xflask*"]
namespaces = false


[tool.setuptools_scm]
version_file = "xflask/_version.py"
local_scheme = "no-local-version"


[project.scripts]
mgserver = "xflask.__main__:main"