[project]
name = "demo1"
version = "0.1.0"
description = "this is description"
authors = [
    {name = "linlei", email = "linlei@migu.cn"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
